# cub-3D

./: CMakeLists.txt  a.out  example_map.cub  ft_isascii_content.c  ft_parser.c  my_cube.h
linux/: CMakeLists.txt  ft_isascii_content.c  ft_parser.c  my_cube.h
mac_os/: CMakeLists.txt  Makefile  a.out  cub3D  example_map.cub  ft_free_memory.c  ft_isaint.c  ft_isascii_content.c  ft_parser.c  ft_print_error.c  ft_screen_shot.c  ft_valid_line.c  main3D.c  map_parser.c  map_parser_utils.c  my_cube.h
mac_os/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
mac_os/libft/: Makefile  ft_atoi.c  ft_lstadd_back.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_putstr_fd.c  ft_split.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_substr.c  libft.h
mac_os/parser/: ft_check.c  ft_check_colors1.c  ft_check_handlers.c  ft_check_if_f.c  ft_check_valid_files.c  ft_handler_f_c.c  ft_handler_f_c1.c  ft_parse.c  ft_parse_inter.c  parser.h
mac_os/reycasting/: ft_base_rc_value.c  ft_calc_and_print_sprite.c  ft_calc_step_init_side.c  ft_control_plr.c  ft_init_val.c  ft_key_hook_handle.c  ft_move_player.c  ft_open_tex_spr.c  ft_print_texture.c  ft_rc_hit.c  ft_rc_s_first.c  ft_reycasting.h  ft_vertical_line.c
mac_os/sprites/: 1.xpm
mac_os/textures/: bluestone.xpm  purplestone.xpm  redbrick.xpm
